--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#profile" class="nav-logo">Mohammed Ayan</a>
       <ul class="nav-links">
         <li><a href="#" id="projects-nav-link">Projects</a></li>
-        <li><a href="resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+        <li><a href="Resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
